# templates

./: Cargo.toml  README.md  cargo-generate.toml  justfile
.github/workflows/: ci.yml
component/: README.md
component-generated/: Cargo.toml  LICENSE
component-generated/src/: tui.rs
component/template/: Cargo.toml
event-driven/: README.md
event-driven-async/: README.md
event-driven-async-generated/: Cargo.toml  README.md
event-driven-async-generated/src/: event.rs  ui.rs
event-driven-async/template/: Cargo.toml  README.md  cargo-generate.toml
event-driven-async/template/src/: app.rs  main.rs
event-driven-generated/: Cargo.toml  README.md
event-driven-generated/src/: app.rs  ui.rs
event-driven/template/: Cargo.toml  README.md  cargo-generate.toml
event-driven/template/.github/workflows/: ci.yml
event-driven/template/src/: event.rs  main.rs  ui.rs
hello-world/: README.md
hello-world-generated/: Cargo.toml  LICENSE  README.md
hello-world/template/: Cargo.toml  README.md  cargo-generate.toml
simple/: README.md
simple-async/: README.md
simple-async-generated/: Cargo.toml  LICENSE  README.md
simple-async-generated/src/: main.rs
simple-async/template/: Cargo.toml  README.md  cargo-generate.toml
simple-async/template/.github/workflows/: ci.yml
simple-async/template/src/: app.rs  main.rs
simple-generated/: Cargo.toml  README.md
simple-generated/src/: app.rs  main.rs
simple/template/: Cargo.toml  README.md  cargo-generate.toml
