[package]
name = "simple-async-generated"
version = "0.1.0"
description = "An example generated using the simple-async template"
authors = ["your name <author@example.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
