[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{project-description}}"
authors = ["{{authors}}"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

